<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d0d0d"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/editer_layout_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/black">

        <FrameLayout
            android:id="@+id/editer_fl_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/editer_back_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/btn_back_shaddowed" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_complete"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_ugc_next"
            android:gravity="center"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </FrameLayout>

    <com.tencent.qcloud.xiaoshipin.videoeditor.bgm.view.TCBGMPannel
        android:id="@+id/tc_bgm_pannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

    <include layout="@layout/layout_save_complete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp">

        <TextView
            android:id="@+id/tv_bgm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_music_selector"
            android:gravity="center"
            android:text="@string/music"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_motion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_motion_selector"
            android:gravity="center"
            android:text="@string/motion"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_time_selector"
            android:gravity="center"
            android:text="@string/speed"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_filter_selector"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_paster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_paster_selector"
            android:gravity="center"
            android:text="@string/paster"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_word_selector"
            android:gravity="center"
            android:text="@string/subtitle"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
