<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2531"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#181D27">

        <LinearLayout
            android:id="@+id/back_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:paddingRight="30dp"
                android:src="@drawable/btn_back_no_shaddow" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/picture_choose"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="146dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_choose_bottom_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/video_long_drag"
            android:textColor="@color/half_white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_choose_next_selector"
            android:text="@string/next_step"
            android:textColor="@color/half_white"
            android:textSize="@dimen/h4" />

        <com.tencent.qcloud.xiaoshipin.videojoiner.widget.swipemenu.SwipeMenuRecyclerView
            android:id="@+id/swipe_menu_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_next"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
</LinearLayout>